Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,103 +1,89 @@
----
-layout: master
-title: Home
----
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Golismero : The Web Knife" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Golismero</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/golismero/golismero">View on GitHub</a>
+
+          <h1 id="project_title">Golismero</h1>
+          <h2 id="project_tagline">The Web Knife</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/golismero/golismero/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/golismero/golismero/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
-  <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
-    <span class="octicon octicon-link"></span>
-  </a>
-  Welcome to GoLismero Github page.
-</h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>GoLismero 2.0 is in beta status and under active development. You can download and test it.</p>
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
-<h3>What's GoLismero 2.0?</h3>
+<h3>
+<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
-<p>GoLismero is an open source framework for security testing. It's currently geared towards web security, but it can easily be expanded to other kinds of scans.</p>
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-<p>The most interesting features of the framework are:</p>
+<h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<ul>
-  <li><b>Real platform independence</b>. Tested on Windows, Linux, *BSD and OS X.</li>
-  <li><b>No</b> native library <b>dependencies</b>. All of the framework has been written in pure Python.</li>
-  <li><b>Good performance</b> when compared with other frameworks written in Python and other scripting languages.</li>
-  <li>Very easy to use.</li>
-  <li>Plugin development is <b>extremely simple.</b></li>
-  <li>The framework also <b>collects and unifies</b> the results of well known tools: <b>sqlmap, xsser, openvas, dnsrecon, theharvester...</b></li>
-  <li>Integration with standards: CWE, CVE and OWASP.</li>
-  <li>Designed for <b>cluster deployment</b> in mind (not available yet).</li>
-</ul>
-
-<h3>Quick manual</h3>
-
-<p>Using GoLismero 2.0 is very easy. Below are some basic commands to start to using it:</p>
-
-<h4>How to install GoLismero 2.0?</h4>
-
-<p>Currently GoLismero 2.0 is <b>under active development</b> so it isn't in the main branch of the github project. To download it, you must write the following:</p>
-
-<pre>git clone -b 2.0.0 https://github.com/cr0hn/golismero.git golismero-2.0</pre>
-
-<h4>Basic usage</h4>
-
-<p>This command will launch GoLismero with all plugins enabled:</p>
-
-<pre>python golismero.py http://mysite.com</pre>
-
-<h4>Available plugins</h4>
-
-<p>If you want display the available plugins, you must write:</p>
-
-<pre>python golismero.py --plugin-list</pre>
-
-<img src="/images/tutorials/quick_start/plugin_list.png" alt="list with de availables plugins" />
-
-<h4>Select a specific plugin</h4>
-
-<p>Currently, the command line usage when you want to enable only some plugins is not very intuitive (we're working to improve that).</p>
-
-<p>If you want to run only the dns transfer plugin, you must write:</p>
-
-<pre>python golismero.py http://mysite.com -d all -e report -e dns_zone_transfer</pre>
-
-<img src="/images/tutorials/quick_start/zone_transfer.png" alt="zone transfer example" />
-
-<p>If you want to run only the plugin to discover hidden files in the web server, you must write:</p>
-
-<pre>python golismero.py http://mysite.com -d all -e report -e bruteforcer_predictables_disclosure</pre>
-
-<img src="/images/tutorials/quick_start/bruteforcer_predictables.png" alt="looking for predictable files." />
-
-<h3>What will be the next features?</h3>
-
-<p>The next features of golismero will be:</p>
-
-<ul>
-  <li>Ncurses UI</li>
-  <li>Web UI</li> 
-  <li>Export results in HTML format</li>
-  <li>Import results from external tools</li>
-  <li>And more plugins of course!</li>
-</ul>
-
-<h3>Found a bug?</h3>
-
-<p>If you have found a bug, you can report it using the <a href="https://github.com/cr0hn/golismero/issues?state=open">github issues system</a>.</p>
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>For any comment, suggestion or bug report you can send us a mail to: 
-        <script language=javascript>
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+    </div>
 
-          <!--
-          var email = "golismero.project"
-          var emailHost = "gmail.com"
-          var arroba = String.fromCharCode(64)
-          var contact = email + arroba + emailHost
-          document.write("<strong><a href=" + "mail" + "to:" + email + arroba + emailHost+ ">" + contact + "</a></strong>" + ".")
-          //-->
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Golismero maintained by <a href="https://github.com/golismero">golismero</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-        </script>
-.</p>
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-26799972-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+
+  </body>
+</html>
